--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
 	<script src="sketch.js"></script>
+	<script src="Cactus.js"></script>
+	<script src="Dino.js"></script>
 
 	<style>
 		body {
